# BYT-Project

./: .gitignore  Procfile  db.sqlite3  manage.py  package-lock.json  pyproject.toml  requirements.txt
BYT/: asgi.py  local_settings.py  local_settings_example.py  modules_settings.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  api_urls.py  api_views.py  consts.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/api_utils/: api_client.py
accounts/fixtures/: startup_fixtures.json
accounts/migrations/: 0001_initial.py  0002_customuser_created_at_customuser_updated_at_and_more.py  0002_customuser_type.py  0002_user_delete_customuser.py  0003_alter_user_groups_alter_user_username.py  0003_rename_userequipment_userinventory_and_more.py  0004_customgroup_alter_user_groups.py  0005_alter_user_role.py  0006_child_parent_remove_user_groups_and_more.py  0007_alter_child_role_alter_parent_role.py
frontend/: README.md  build_front.sh  package-lock.json  package.json  requirements.txt  vue.config.js
frontend/src/: App.vue  main.js
templates/: base.html
templates/registration/: edit_profile.html  login.html  register.html
test_front/: apps.py  views.py
tests/: admin.py  api_urls.py  api_views.py  consts.py  models.py  serializers.py
tests/fixtures/: tests_fixtures.json
tests/migrations/: 0001_initial.py  0002_classroom_created_at_classroom_updated_at_and_more.py  0002_classroom_created_by_alter_classroom_exercises_and_more.py  (+2 more)
utils/: api_views.py  models.py
vite-frontend/: index.html  package-lock.json  package.json  vite.config.js
(+94 files in other folders)
