[tool.poetry]
name = "edupjatk"
version = "0.1.1"
description = "EduPjatk-Education"
authors = ["Jakub Pobłocki <jakubp111@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
asgiref = {version = "3.7.2", allow-prereleases = true}
confusable-homoglyphs = {version = "3.2.0", allow-prereleases = true}
django = {version = "4.2.5", allow-prereleases = true}
django-registration = {version = "3.4", allow-prereleases = true}
djangorestframework = {version = "3.14.0", allow-prereleases = true}
drf-yasg = {version = "1.21.7", allow-prereleases = true}
inflection = {version = "0.5.1", allow-prereleases = true}
packaging = {version = "23.1", allow-prereleases = true}
pillow = {version = "10.0.1", allow-prereleases = true}
pytz = {version = "2023.3.post1", allow-prereleases = true}
pyyaml = {version = "6.0.1", allow-prereleases = true}
sqlparse = {version = "0.4.4", allow-prereleases = true}
typing-extensions = {version = "4.8.0", allow-prereleases = true}
uritemplate = {version = "4.1.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
